LIVE-66 Added new styling to home page

--- a/www/app/stylus/components/_burstButton.styl
+++ b/www/app/stylus/components/_burstButton.styl
@@ -1,5 +1,9 @@
+.burst-button-container {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+}
 .burst-button {
-
     font-family: 'Font Awesome'
 
     .burst-large-circle, .burst-small-circle {
