--- a/www/app/stylus/components/_scoreOverlay.styl
+++ b/www/app/stylus/components/_scoreOverlay.styl
@@ -1,6 +1,6 @@
 .score-overlay-container {
     transform: translateX(-50%) skew(-10deg);
-    background: rgb(8, 3, 28) url('/img/radial-gradient.png');
+    background: rgba(8, 3, 28, .6) url('/img/radial-gradient.png');
     background-size: 100%;
     background-position: -24px -96px;
     position: absolute;
