--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -2,18 +2,22 @@
 	padding: 0;
 
 h3.rowTitle
-	margin: 14px 0 0 10px
+	margin: 30px 0 0 10px
 	float: left
 	font-family: Roboto, sans-serif;
+	color: white;
+	font-size: 16px;
 
 .sliderButtons
 	float: right
+	display: none;
 
 .slider
 	float: none
 	width: 100%
 	clear: both
 	overflow: hidden
+	margin-top: -8px;
 
 //This margin makes room for the header being positioned fixed at top of it.
 .main
