--- a/www/app/stylus/components/_video.styl
+++ b/www/app/stylus/components/_video.styl
@@ -1,9 +1,10 @@
 @import '../constants/_variables.styl';
 .videoThumb
-    border: 3px solid $color_smoke
-    border-radius: 8px
+    // border: 1px solid $color_smoke
+    // border-radius: 8px
     //height: 200px
     margin:5px
+    width:90%;
     transition: all 0.2s ease;
     &:hover
         transform:scale(1.05);
