--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -2,6 +2,7 @@ body
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
+  background: rgb(20, 20, 20);
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
@@ -17,7 +18,6 @@ body
 @import './components/_mainContainer.styl';
 @import './components/_poster.styl';
 @import './components/_player.styl';
-@import './components/_description.styl';
 @import './components/_formList.styl';
 
 // Second Layer Styles
@@ -30,3 +30,6 @@ body
 @import './components/_playerInfoOverlay.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
+
+// Video Player Styles
+@import './components/_videoPlayerCustomization.styl';
