LIVE-66 Added style to make homepage UI better

--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -19,6 +19,11 @@ h3.rowTitle
 	overflow: hidden
 	margin-top: -8px;
 
+.slick-list
+	transform: scale(.9) !important;
+	overflow: visible !important;
+	transform-origin: left;
+
 //This margin makes room for the header being positioned fixed at top of it.
 .main
 	margin-bottom: 50px
