LIVE-66 Fixed styling on carousel, added .vscode files to gitignore

--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -19,7 +19,7 @@ h3.rowTitle
 	overflow: hidden
 	margin-top: -8px;
 
-.slick-list
+.slider .slick-list
 	transform: scale(.9) !important;
 	overflow: visible !important;
 	transform-origin: left;
