--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -1,12 +1,13 @@
 .slide
 	padding: 0;
 
-h3.rowTitle
+a.rowTitle
 	margin: 30px 0 0 10px
 	float: left
 	font-family: Roboto, sans-serif;
 	color: white;
 	font-size: 16px;
+	text-decoration: none
 
 .sliderButtons
 	float: right
