--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -19,6 +19,7 @@ body
 @import './components/_poster.styl';
 @import './components/_player.styl';
 @import './components/_formList.styl';
+@import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
 
 // Second Layer Styles
