--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -131,8 +131,9 @@ p.divider{
 .bottomTabs{
   position:fixed;
   bottom: 0;
-  z-index: 999;
+  z-index: 1200;
   width: 100%;
+  box-shadow: 0px 0px 21px rgba(0, 0, 0, .1);
 }
 
 // MENU BUTTON ANIMATIONS
