--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -134,6 +134,9 @@ p.divider{
   z-index: 1200;
   width: 100%;
   box-shadow: 0px 0px 21px rgba(0, 0, 0, .1);
+  @media (min-aspect-ratio: 13/9) {
+    z-index: 900;
+  }
 }
 
 // MENU BUTTON ANIMATIONS
