LIVE-45 Made simple profile page

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -12,7 +12,8 @@
 	display:none
 .visible
 	display:visible
-	
+.center
+	text-align:center
 //Simple way to hide stuff on mobile or tablet; use hideOnTablet, hideOnMobile
 @media (max-width: $medium_screen)
 	.hideOnMobile
