--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -1,11 +1,9 @@
 .slide
-	padding: 0;
+	padding: 20px 0 0 0
 
 a.rowTitle
 	margin: 30px 0 0 10px
 	float: left
-	font-family: Roboto, sans-serif;
-	color: white;
 	font-size: 16px;
 	text-decoration: none
 
