--- a/www/app/stylus/constants/_fonts.styl
+++ b/www/app/stylus/constants/_fonts.styl
@@ -31,3 +31,10 @@ h3, h4
 
 h1, h2, h3, h4, h5, h6
   font-weight: normal
+  font-family: Roboto, sans-serif
+
+//Everything except navigation
+.mainContent
+  color: $color_smoke
+  a
+    color:white
