--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -1,13 +1,15 @@
 $color_charcoal = #373737; //dark grey
 $color_gold = #ffd700; //yellow
-$color_paper = #f4f4f4; //light_yellow
+$color_paper = #f4f4f4; //white
 $color_evening = #262228; //dark-purple1
 $color_void = #0E0B16; //dark-purple2
 $color_ocean = #0092ab; //blue1
 $color_starry = #037584; //blue2
 $color_irises = #007849; //green
-$color_smoke = #F5F5F5; //white smoke
-$cubic = cubic-bezier(.02, .01, .47, 1); //transition
+$color_smoke = #f0f0f0; //Greyish white
+
+//transition
+$cubic = cubic-bezier(.02, .01, .47, 1); 
 
 //Constants for height
 $bottom_offset = 72px; //Height of the bottomTabs. 
