--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -21,6 +21,7 @@ body
 @import './components/_formList.styl';
 @import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
+@import './components/_profile-page.styl'
 
 // Second Layer Styles
 @import './components/_burstButton.styl';
