--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -1,5 +1,16 @@
 
 $tilePadding = 10px 10px 10px 0
+
+.programsPage
+  margin: 0 5px
+  .masonry_tiles 
+    .tile
+      width:50%
+      .masonry_tile_inner
+        margin: 0
+      .tile-overlay
+        display:none
+
 .masonry_tiles 
   .tile
     width:100%
