--- a/www/app/stylus/components/_chatOverlay.styl
+++ b/www/app/stylus/components/_chatOverlay.styl
@@ -1,10 +1,12 @@
 .chat-overlay {
     width: 33%;
-    height: 100%;
+    height: 250px;
     background: rgba(0, 0, 0, .3);
+    display: none;
     color: white;
     position: absolute;
-    top: -72px;
+    top: 70px;
+    left: 20px;
     transition: .5s all;
     margin-left: -33%;
 
@@ -12,29 +14,48 @@
         margin-left: 0;
     }
 
-    input {
-        position: absolute;
-        bottom: 5px;
-        left: 5px;
-    }
-    button {
-        position: absolute;
-        bottom: 5px;
-        right: 5px;
-        color: white;
-    }
-
     .chat-messages {
-        position: absolute;
-        bottom: 0;
-        padding-bottom: 20px;
         list-style: none;
-        padding-left: 5px;
+        padding-left: 0;
+        position: absolute;
+        height: 64%;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+
+        li {
+            width: auto;
+            display: inline-block;
+            padding: 5px;
+            background: white;
+            border-radius: 20px;
+            color: black;
+            margin-bottom: 20px;
+        }
+
+        .chat-avatar {
+            color: white;
+            background: green;
+            border-radius: 100%;
+            width: 32px;
+            height: 32px;
+            display: inline-block;
+            text-align: center;
+            padding-top: 8px;
+            box-sizing: border-box;
+            margin-right: 20px;
+        }
 
         .chat-user {
-            font-weight: bold;
+            font-size: 12px;
+            position: absolute;
+            margin-top: 0px;
+        }
+        .chat-message {
+            position: absolute;
+            margin-top: 15px;
             display: inline-block;
-            padding-right: 8px;
         }
     }
 }
