--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -1,6 +1,12 @@
 .slide
 	padding: 20px 0 0 0
 
+	h1, p
+		color: white
+
+	h1 
+		padding-top: 20px
+
 a.rowTitle
 	margin: 30px 0 0 10px
 	float: left
@@ -25,7 +31,7 @@ a.rowTitle
 
 //This margin makes room for the header being positioned fixed at top of it.
 .main
-	margin-bottom: 50px
+	margin-bottom: 100px
 	margin-top: 48px;
 
 @media (min-width: 1000px)
