--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -17,7 +17,7 @@
         position: fixed;
         width: 100%;
         height: 70%;
-        padding: 20px 20px 0 20px;
+        padding: 0 20px;
         background: white;
         will-change: transform;
         top: 100%;
