--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -2,7 +2,7 @@ body
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
-  background: rgb(20, 20, 20);
+  background: #333;
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
@@ -22,6 +22,7 @@ body
 @import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
 @import './components/_profile-page.styl'
+@import './components/_chat.styl';
 
 // Second Layer Styles
 @import './components/_burstButton.styl';
@@ -33,6 +34,3 @@ body
 @import './components/_playerInfoOverlay.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
-
-// Video Player Styles
-@import './components/_videoPlayerCustomization.styl';
