LIVE-44 Removed old files. Started with channels page

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -21,8 +21,8 @@ body
 @import './components/_formList.styl';
 @import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
-@import './components/_profile-page.styl'
 @import './components/_chat.styl';
+
 
 // Second Layer Styles
 @import './components/_burstButton.styl';
@@ -34,3 +34,10 @@ body
 @import './components/_playerInfoOverlay.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
+
+// Video Player Styles
+@import './components/_videoPlayerCustomization.styl';
+
+// Pages
+@import './components/_profile-page.styl'
+@import './components/_channel-page.styl'
