--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -29,14 +29,20 @@
     width: 100% !important;
 }
 
+
+// Controls Container
 .video-react .video-react-control-bar {
     background: transparent !important;
+    opacity: 1;
+    transition: opacity 400ms;
 }
 
-.replay, .slomo, .highlights, .video-react-icon-fullscreen {
+// Custom Buttons
+.replay, .slomo, .video-react-icon-fullscreen {
     display: none !important;
 }
 
+// Video Duration Numbers
 .video-react-duration {
     position: absolute !important;
     right: -6px;
@@ -45,6 +51,7 @@
     text-shadow: 2px 2px 2px rgba(0, 0, 0, .6);
 }
 
+// Current Time Numbers
 .video-react-current-time {
     position: absolute !important;
     left: -6px;
@@ -53,33 +60,41 @@
     text-shadow: 2px 2px 2px rgba(0, 0, 0, .6);
 }
 
+// Play control button
 .video-react-play-control {
     position: absolute !important;
-    left: -8px;
-    top: 6px;
+    width: 2em !important;
+    left: 10px;
+    top: 12px;
     z-index: 2001;
 }
 
+// Time Divider
 .video-react-time-divider {
     display: none;
 }
 
+// Volume
 .video-react-volume-menu-button-horizontal {
     position: absolute !important;
     left: 60px;
-    top: 6px;
+    top: 13px;
 }
 
-.video-react-control-bar {
-    opacity: 1;
-    transition: opacity 400ms;
-}
-
-.minimized .video-react-control-bar, .second-layer-open {
+.minimized .video-react-control-bar {
     opacity: 0 !important;
 }
 
-// .video-react-control-bar {
-//     bottom: -73px !important;
-// }
+// Icons
+.video-react .video-react-control:before {
+    font-size: 1.4em !important;
+}
 
+.video-react-control-bar .material-icons
+    color: white !important
+    font-size: 32px !important
+
+.highlights {
+    position: absolute !important;
+    right: 20px;
+}
