--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -1,4 +1,6 @@
 $color_charcoal = #373737; //dark grey
+$color_grey = #7c7c7c;
+$color_lightGrey = #dfdfdf;
 $color_gold = #ffd700; //yellow
 $color_paper = #f4f4f4; //white
 $color_evening = #262228; //dark-purple1
