--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -38,3 +38,5 @@ body
 // Pages
 @import './components/_profile-page.styl'
 @import './components/_channel-page.styl'
+
+@import './components/_horizontalScroll.styl'
