LIVE-68  Started with sports section. Implemented SingleChannelPage. Fixed searching in search overlay.

--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -8,7 +8,7 @@
     margin: 0 20px
     white-space: nowrap;
 
-@media (min-width: 600px)
+@media (min-width: 1000px)
   .horizontalScroll
     overflow:auto
     background-color: transparent
@@ -40,7 +40,7 @@
       color: #fff
       border-bottom: solid 2px #00fcff
 
-@media (min-width: 600px)
+@media (min-width: 1000px)
   .filterTabs.horizontalScroll
     background-color: transparent
     .items
@@ -63,3 +63,8 @@
   .circleAvatar
     text-align: center
     max-width:100px
+/*
+.circle-overlay
+  position:absolute
+  left:25%
+  max-width: 100%;*/
