LIVE-68 Added dummy content and added to the different sections. Also moved some files into seprate folders.

--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -39,7 +39,9 @@
     .items.active
       color: #fff
       border-bottom: solid 2px #00fcff
-
+.filterTabs.horizontalScroll.wide
+  .horizontalScrollInner .items
+    padding: 15px 12.5%
 @media (min-width: 1000px)
   .filterTabs.horizontalScroll
     background-color: transparent
