--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -39,4 +39,6 @@ body
 @import './components/_profile-page.styl'
 @import './components/_channel-page.styl'
 
+@import './components/_sportSection.styl'
+
 @import './components/_horizontalScroll.styl'
