--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -52,7 +52,7 @@
       margin: 0
       white-space:normal
 
-//For circle avatars
+//For circle avatars and other items.
 .horizontalScroll
   .label
     margin:2px 0
@@ -65,6 +65,13 @@
   .circleAvatar
     text-align: center
     max-width:100px
+  .scrollItem
+    max-width:200px
+    margin: 0 10px
+    text-align:center
+    .itemImage
+      width: 100%
+      white-space:nowrap
 /*
 .circle-overlay
   position:absolute
