--- a/www/app/stylus/components/_poster.styl
+++ b/www/app/stylus/components/_poster.styl
@@ -3,13 +3,12 @@
 
   position: relative;
   width: 100%;
-  height:100%;
 }
 
 .image {
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .overlay {
@@ -17,7 +16,7 @@
   display: flex;
   top:0;
   left:0;
-  background-color: rgba(255,255,255,0.2);
+//  background-color: rgba(255,255,255,0.2);
   overflow: hidden;
   height:100%;
   width: 100%;
