LVIE-67 Added styling to content

--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -17,8 +17,8 @@
         position: fixed;
         width: 100%;
         height: 70%;
-        padding: 0 20px;
-        background: white;
+        padding: 30px 20px;
+        background: black;
         will-change: transform;
         top: 100%;
         left: 0;
