Cleaning up console. Removed lots of console logs and errors.

--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -1,28 +1,30 @@
-.overlay-x-container {
-    position: fixed;
-    z-index: 1000;
+.overlay-x-container 
+    position: fixed
+    z-index: 1000
 
-    .ox-video-container {
-        width: 100%;
-        height: 30%;
-        background: black;
-        position: fixed;
-        left: 0;  
-        top: 0;
-        touch-action: none;
-        z-index: 1100;
-    }
+    .ox-video-container 
+        width: 100%
+        height: 30%
+        background: black
+        position: fixed
+        left: 0
+        top: 0
+        touch-action: none
+        z-index: 1100
+    
 
-    .ox-content {
-        position: fixed;
-        width: 100%;
-        height: 70%;
-        padding: 30px 20px;
-        background: black;
-        will-change: transform;
-        top: 100%;
-        left: 0;
-        box-sizing: border-box;
-        z-index: 1050;
-    }
-}
+    .ox-content 
+        position: fixed
+        width: 100%
+        height: 70%
+        padding: 30px 20px
+        background: black
+        color: $color_smoke
+        will-change: transform
+        top: 100%
+        left: 0
+        box-sizing: border-box
+        z-index: 1050
+        a
+            color:white
+    
