--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -77,6 +77,7 @@
 // Volume
 .video-react-volume-menu-button-horizontal {
     position: absolute !important;
+    display: none;
     left: 60px;
     top: 13px;
 }
@@ -97,4 +98,53 @@
 .highlights {
     position: absolute !important;
     right: 20px;
+}
+
+
+.pre-play-overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    .gradient-overlay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 120px;
+        z-index: 2000;
+        pointer-events: none;
+        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0, 0, 0, 1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0, 0, 0, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    }
+
+    .play-button {
+        position: absolute;
+        color: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2000;
+        pointer-events: none;
+
+        i {
+            font-size: 46px;
+            text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+        }
+    }
+
+    .close-button {
+        position: absolute;
+        color: white;
+        top: 20px;
+        left: 20px;
+        z-index: 2000;
+
+        i {
+            font-size: 32px;
+            text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+        }
+    }
 }
