--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -332,7 +332,7 @@
   display: none
 
 @media (max-width: 1024px)
-  .carouselRight .description
+  .carouselRight .videoDescription
     display: none
 
 @media (max-width: 800px)
