--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -5,7 +5,7 @@
   overflow-y: scroll
   white-space: nowrap;
   .horizontalScrollInner
-    margin: 0 20px
+    margin: 0
     white-space: nowrap;
 
 @media (min-width: 1000px)
@@ -23,6 +23,7 @@
 .filterTabs.horizontalScroll
   .horizontalScrollInner
     margin: 20px 0 17px 0 //bottom-margin be more than .items bottom-padding
+    text-align:left
     .items
       border-bottom:solid 1px $color_lightGrey
       display:inline
@@ -67,7 +68,7 @@
     max-width:100px
   .scrollItem
     max-width:200px
-    margin: 0 10px
+    margin: 0 10px 0 0
     text-align:center
     .itemImage
       width: 100%
