--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -17,7 +17,8 @@
         position: fixed
         width: 100%
         height: 70%
-        padding: 30px 20px
+        overflow:auto
+        //padding: 30px 20px
         background: black
         color: $color_smoke
         will-change: transform
@@ -28,3 +29,5 @@
         a
             color:white
     
+    .ox-content-inner
+        padding: 30px 20px
