--- a/www/app/stylus/components/_formList.styl
+++ b/www/app/stylus/components/_formList.styl
@@ -4,7 +4,7 @@
         cursor: pointer;
         list-style: none;
         padding-bottom: 16px;
-        color: #333;
+        color: white;
         &:hover {
             color: $color_ocean;
         }
