--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -42,3 +42,12 @@ body
 @import './components/_sportSection.styl'
 
 @import './components/_horizontalScroll.styl'
+
+.logged-menu-icon {
+  display: inline-block;
+    position: relative;
+    height: 100%;
+    width: 29px;
+    padding: 12px;
+    font-size: 24px;
+}
