--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -31,3 +31,18 @@
     
     .ox-content-inner
         padding: 30px 20px
+
+.accordion
+    width:100%
+    .expandIcon
+        max-width:10%
+        vertical-align:top
+        float:right
+    .accordion-label
+        max-width:90%
+        display:inline-block
+        margin: 0 0 5px 0
+        line-height:1.5
+        font-weight:bold
+.collapsible
+    border-bottom:solid 1px $color_grey;
