LIVE-47 Made Wishlist page

--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -21,25 +21,28 @@
 
     input {
         position: fixed;
-        width: 50%;
-        font-size: 21px;
-        padding: 5px 10px;
+        width: 75%;
+        font-size: 18px;
+        padding: 10px 15px;
         bottom: 10px;
         left: 10px
+        background: #333;
         border: 1px solid black;
+        border-radius: 5px;
+        color: white;
     }
 
     button {
         right: 20px;
-        width: 30%;
+        width: 12%;
         position: fixed;
-        bottom: 10px;
-        font-size: 21px;
+        bottom: 12px;
+        right: 10px;
+        font-size: 24px;
         padding: 5px 10px;
-        background: #333;
+        background: transparent;
         color: white;
         border: none;
-        border: 1px solid #333;
     }
 
     .chat-messages {
