--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -38,9 +38,15 @@
 }
 
 // Custom Buttons
-.replay, .slomo, .video-react-icon-fullscreen {
+.replay, .slomo {
     display: none !important;
 }
+.video-react-icon-fullscreen {
+    position: absolute !important;
+    right: 0;
+    bottom: -10px;
+}
+
 
 // Video Duration Numbers
 .video-react-duration {
