LIVE-71 Added sport player info overlay page.

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -26,5 +26,7 @@
 .container-fluid
 	padding-top:5px
 
-.preventScroll
-	overflow:hidden
+//.preventScroll
+//	overflow:hidden!important
+//	touch-action: none!important
+//	position: fixed!important
