--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -39,7 +39,7 @@
       color: $color_lightGrey
     .items.active
       color: #fff
-      border-bottom: solid 2px #00fcff
+      border-bottom: solid 2px $color_knallbla
 .filterTabs.horizontalScroll.wide
   .horizontalScrollInner .items
     padding: 15px 12.5%
