--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -137,14 +137,16 @@
 
     .close-button {
         position: absolute;
-        color: white;
         top: 20px;
         left: 20px;
         z-index: 2000;
-
-        i {
-            font-size: 32px;
-            text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
-        }
+        //font-size: 32px;
     }
+    
+}
+
+.close-button {
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+    //font-size: 32px;
 }
