--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -6,6 +6,7 @@ $color_paper = #f4f4f4; //white
 $color_evening = #262228; //dark-purple1
 $color_void = #0E0B16; //dark-purple2
 $color_ocean = #0092ab; //blue1
+$color_knallbla = #00fcff;
 $color_starry = #037584; //blue2
 $color_irises = #007849; //green
 $color_smoke = #f0f0f0; //Greyish white
