LIVE-43 Hides user icon on search overlay

--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -275,8 +275,11 @@
   font-weight: normal
 
 .carouselRight .slick-dots li.slick-active button:before, .carouselRight .slick-dots li button::before
-  color: white
+  color: white!important
 
+.slick-dots li button:before
+  color: white!important
+  
 .carouselRight .carouselTitleAndDescription
   width: calc(70% - 60px)
   float: left
