--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -8,6 +8,7 @@
   padding: 5px
   border-bottom: 0;
   background-color:transparent
+  width: 95%
 
 .searchInput input:active, .searchInput input:focus
   outline: none
@@ -35,8 +36,8 @@
     position: absolute
     margin:10px 5px 5px 20px
     opacity: 1
-    width: 60%
-    max-width: 250px
+    width: 80%
+    //max-width: 250px
     opacity: 1
     transition: all 0.3s $cubic
     transform: translate(0, 0)
@@ -54,7 +55,15 @@
     transform: translate(-10%, 0)
     input
       opacity:0
+.rightMenu
+  .logged-menu-icon, .iconbutton
+      transform: translate(0, 0);
+      transition: all 0.1s $cubic
       
+.rightMenu.searchOpen
+  .logged-menu-icon, .iconbutton
+      transform: translate(100%, 0);
+
 
 //Searchcontainer - Window that expands to show suggestions.
 .searchContainer
