LIVE-88 Fixed some missing style changes

--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -13,7 +13,7 @@
         border: solid 4px rgba(250,250,250,0.3);
 
 
-.sportPlayerOverlay
+.sportTeamMemberOverlay
     position:fixed
     z-index:1200
     top:0
@@ -29,7 +29,7 @@
         border:solid 4px rgba(250, 250, 250, 0.2)
     .personal-info
         margin-bottom: 30px
-.sportPlayerOverlayInner
+.sportTeamMemberOverlayInner
     margin: 20px
     .close-button
         position:fixed
