--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -66,6 +66,7 @@
   .circleAvatar
     text-align: center
     max-width:100px
+    position:relative
   .scrollItem
     max-width:200px
     margin: 0 10px 0 0
@@ -78,3 +79,8 @@
   position:absolute
   left:25%
   max-width: 100%;*/
+
+.circleFilterOverlay
+  position:absolute
+  left:25%
+  top:25%
