--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -30,10 +30,15 @@ a.rowTitle
 	transform-origin: left;
 
 //This margin makes room for the header being positioned fixed at top of it.
-.main
-	margin-bottom: 100px
-	margin-top: 48px;
 
 @media (min-width: 1000px)
-	.main
-		margin-top: 0;
+	.mainContent
+		margin: 0
+
+
+.mainContent
+	margin-bottom: 100px
+	margin-top: 48px;
+	position:absolute
+	width:100%
+	top:0	
