--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -82,5 +82,6 @@
 
 .circleFilterOverlay
   position:absolute
-  left:25%
-  top:25%
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
