LIVE-99 Should work now.

--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -21,6 +21,7 @@
     left:0
     right:0
     overflow:auto
+    color: #fff
     background-color: rgba(0, 0, 0, 0.8)
     h1
         10px 0
@@ -30,7 +31,7 @@
     .personal-info
         margin-bottom: 30px
 .sportTeamMemberOverlayInner
-    margin: 20px
+    opacity: 1;
     .close-button
         position:fixed
         right: 15px
