LIVE-106 Began to add more players

--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -14,7 +14,7 @@
     .masonry_tile_inner
       position:relative
       overflow:hidden
-      margin: 10px 20px 10px 0
+      margin: 0 10px 5px 0
     .centerOverlay
       position: absolute;
       top: 0
