--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -35,10 +35,11 @@
       right: 0
       bottom: 4px //Some wierd margin under the images. 
       padding:5px
-      align-items: center
+      align-items: flex-end
       overflow:hidden
+      min-height:50%
       display:flex
-      background: rgba(0,0,0, 0.3)
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0, 0.4) 100%)
     .tile-image
       position:relative  
     .masonryPlayButton
