LIVE-90 remove play button from carousel

--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -309,12 +309,13 @@
   position: absolute
   bottom: 15px
   color: white
-  left: 66px
+  left: 40px
   width: 75%
   z-index: 2
 
 .carouselImageTitle, .imageDescription
   margin: 0
+  cursor: pointer
 
 .imageDescription 
   font-size: 12px
