--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -45,6 +45,10 @@
         border: none;
     }
 
+    .chat-title {
+        position: absolute;
+    }
+
     .chat-messages {
         list-style: none;
         padding: 40px 40px 20px 0;
