--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -29,9 +29,10 @@
         top: 0;
         width: 25%;
         height: 100%;
+        overflow:hidden;
 
         img {
-            transform: skew(10deg) translateX(-50%);
+            transform: skew(10deg) translateX(-50%) scale(1.3);
             position: absolute;
             left: 50%;
             height: 100%;
