LIVE-92 tabmenu is now hidden on input focus. Also the keyboard closes on "enter" keypress. LIVE-113 added thin line

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -27,6 +27,15 @@
 	margin: 0 20px
 	padding-top:5px
 
+//Animation
+.fadeOut
+	transition: .5s all;
+	opacity: 0
+.fadeIn
+	transition: .5s all;
+	opacity: 1
+
+
 //.preventScroll
 //	overflow:hidden!important
 //	touch-action: none!important
