--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -56,8 +56,8 @@
 //For circle avatars and other items.
 .horizontalScroll
   .label
-    margin:2px 0
-    font-size:$font_s
+    margin:5px 0 2px
+    font-size:$font_xs
     text-overflow: ellipsis;
     overflow:hidden
   .avatar
