--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -25,7 +25,7 @@
       justify-content: center; /* align horizontal */
       align-items: center; /* align vertical */
       h1, h2, h4, h5, h6, p, .text
-        background-color: rgba(0, 0, 0, 0.5);
+        //background-color: rgba(0, 0, 0, 0.3);
         padding:10px
     img
       width:100%
@@ -39,7 +39,7 @@
       overflow:hidden
       min-height:50%
       display:flex
-      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0, 0.4) 100%)
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%);
     .tile-image
       position:relative  
     .masonryPlayButton
@@ -58,7 +58,16 @@
       color: #fff
       overflow:hidden
       text-overflow: ellipsis
+      text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
       margin:5px
+    h2
+      font-size: 24px;
+      color: #fff;
+      overflow: hidden;
+      font-weight: bolder;
+      text-overflow: ellipsis;
+      text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+      margin: 5px;
     p.metadata
       margin: 2px 0;
       font-weight:normal
