--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -71,8 +71,8 @@
   width:100%
   right:0
   top:$top_offset
-  bottom:$bottom_offset
-  z-index: 999
+  bottom: 0//$bottom_offset
+  z-index: 800
   overflow:auto
   background-color:white
   transition: all 0.5s $cubic
