--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -15,6 +15,14 @@
       position:relative
       overflow:hidden
       margin: 0 10px 5px 0
+    .liveOverlay
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 10px 10px 0 0
+      background-color: red;
+      p
+        margin: 5px;
     .centerOverlay
       position: absolute;
       top: 0
