--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -46,4 +46,21 @@
         line-height:1.5
         font-weight:bold
 .collapsible
-    border-bottom:solid 1px $color_grey;
+    //border-bottom:solid 1px $color_grey;
+    position:relative
+    p
+        line-height: 1.2 !important;
+        font-size: 16px !important;
+        margin: 0 auto;
+        overflow: hidden;
+        padding-right:35px
+    span.collapseIcon
+        //border: solid 1px rgba(250, 250, 250, 0.6);
+        height: 24px;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        width: 24px;
+        background-color: rgba(255, 255, 255, 0.77)
+        right: 0;
+        color:black
