LIVE-112 Added pulse indicators to show areas of interaction

--- a/www/app/stylus/components/_lineupOverlay.styl
+++ b/www/app/stylus/components/_lineupOverlay.styl
@@ -56,7 +56,7 @@
         right: 10px;
     }
 
-    .football-shirt {
+    .lineup-shirt-container {
         position: absolute;
         transform: translate(-50%, -50%);
         width: 7%;
