--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -34,6 +34,7 @@ body
 @import './components/_playerInfoOverlay.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
+@import './components/_clickIndicator.styl';
 
 // Pages
 @import './components/_profile-page.styl'
@@ -50,9 +51,4 @@ body
     width: 29px;
     padding: 12px;
     font-size: 24px;
-}
-
-
-.click-indicator {
-  box-shadow:
 }
