LIVE-51 Replaced TabMenu with new MobileMenu

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -22,6 +22,7 @@ body
 @import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
 @import './components/_chat.styl';
+@import './components/navigation/_mobileMenu.styl';
 
 
 // Second Layer Styles
