--- a/www/app/stylus/components/_clickIndicator.styl
+++ b/www/app/stylus/components/_clickIndicator.styl
@@ -6,11 +6,11 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: rgba(243, 156, 18, 0.6);
+    background: rgba(243, 156, 18, .9);
     z-index: -1;
     cursor: pointer;
-    box-shadow: 0 0 0 rgba(243, 156, 18, 0.6);
-    animation: pulse 4s infinite;
+    box-shadow: 0 0 0 rgba(243, 156, 18, .9);
+    animation: pulse-orange 2s infinite;
 }
 .click-indicator-pop:hover {
     animation: none;
@@ -27,8 +27,8 @@
     background: transparent;
     z-index: -1;
     cursor: pointer;
-    box-shadow: 0 0 0 rgba(255, 255, 255, 0.6);
-    animation: pulse 4s infinite;
+    box-shadow: 0 0 0 rgba(255, 255, 255, .9);
+    animation: pulse 2s infinite;
 }
 .click-indicator-text:hover {
     animation: none;
@@ -46,16 +46,42 @@
     background: transparent;
     z-index: -1;
     cursor: pointer;
-    box-shadow: 0 0 0 rgba(255, 255, 255, 0.6);
-    animation: pulse 4s infinite;
+    box-shadow: 0 0 0 rgba(255, 255, 255, .9);
+    animation: pulse 2s infinite;
 }
 .click-indicator-shirt:hover {
     animation: none;
 }
 
+@-webkit-keyframes pulse-orange {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(243, 156, 18, .9);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 15px rgba(243, 156, 18, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(243, 156, 18, 0);
+  }
+}
+@keyframes pulse-orange {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(243, 156, 18, .9);
+    box-shadow: 0 0 0 0 rgba(243, 156, 18, .9);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 15px rgba(243, 156, 18, 0);
+      box-shadow: 0 0 0 15px rgba(243, 156, 18, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(243, 156, 18, 0);
+      box-shadow: 0 0 0 0 rgba(243, 156, 18, 0);
+  }
+}
+
 @-webkit-keyframes pulse {
   0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.6);
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, .9);
   }
   70% {
       -webkit-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
@@ -66,8 +92,8 @@
 }
 @keyframes pulse {
   0% {
-    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.6);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.6);
+    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, .9);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, .9);
   }
   70% {
       -moz-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
