--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -8,7 +8,7 @@
   text-transform: none !important;
   position: fixed;
   top: 0;
-  z-Index: 999;
+  z-Index: 800;
   color: #000;
 }
 
@@ -88,10 +88,11 @@
   text-align:center;
   background-color: $color_ocean;
   position: fixed;
-  bottom: $bottom_offset;
+  padding-bottom: 100px;
+  bottom: 0;
   width: 100%;
   right: 0;
-  z-Index: 999999;
+  z-Index: 850;
   overflow:auto;
   color: #fff;
   list-style-type: none;
@@ -160,6 +161,17 @@ p.divider{
   padding: 0 0 4px 0;
   vertical-align: middle;
   stroke-linecap: round;
+}
+
+.animMenuCrossIcon {
+  vertical-align: middle;
+  stroke-linecap: round;
+  transition: .3s transform;
+  transform: rotate(-45deg);
+
+  &.isOpen {
+    transform: rotate(0deg);
+  }
 }
 
 .animMenuIcon .bottom, .animMenuIcon .middle, .animMenuIcon .top{
