LIVE-122 Overhaul on settings page.

--- a/www/app/stylus/constants/_variables.styl
+++ b/www/app/stylus/constants/_variables.styl
@@ -38,3 +38,5 @@ $font_m = 16px; //Normal paragraph size
 $font_l = 18px; //Smaller heading/bigger text
 $font_xl = 24px; //Bigger heading, i.e h2
 $font_xxl = 32px; //Even bigger. i.e h1
+
+$font_awesome = normal normal normal 14px/1 FontAwesome;
