--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -18,7 +18,6 @@ body
 @import './components/_mainContainer.styl';
 @import './components/_poster.styl';
 @import './components/_player.styl';
-@import './components/_formList.styl';
 @import './components/_drawerMenu.styl';
 @import './components/_overlayX.styl';
 @import './components/_chat.styl';
@@ -44,6 +43,8 @@ body
 @import './components/_sportSection.styl'
 
 @import './components/_horizontalScroll.styl'
+
+@import './components/form_items_common.styl'
 
 .logged-menu-icon {
   display: inline-block;
