--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -38,7 +38,7 @@ a.rowTitle
 
 .mainContent
 	margin-bottom: 100px
-	margin-top: 48px;
+	//margin-top: 48px;
 	position:absolute
 	width:100%
 	top:0	
