Style and translation fix

--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -1,6 +1,7 @@
 @import '../constants/_variables.styl';
 // -------  SEARCH  
 .searchInput input
+  background:none
   border-top: none
   border-left: none
   border-right: none
