--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -47,6 +47,12 @@
 
     .chat-title {
         position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 20px;
+        padding: 20px;
+        background: #333;
     }
 
     .chat-messages {
