LIVE-78 Added video settings overlay

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -35,6 +35,7 @@ body
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
 @import './components/_clickIndicator.styl';
+@import './components/SecondLayer/_emptyOverlay.styl';
 
 // Pages
 @import './components/_profile-page.styl'
