--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -30,6 +30,10 @@
         border: 1px solid black;
         border-radius: 5px;
         color: white;
+
+        &:focus {
+            color: #333;
+        }
     }
 
     button {
