--- a/www/app/stylus/components/_channel-page.styl
+++ b/www/app/stylus/components/_channel-page.styl
@@ -1,8 +1,9 @@
 .channel-page
     img.logo
         position: absolute;
-        top: 15%;
-        left: 25%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         max-width: 40%;
 
     .tile
